@@ -73,6 +73,7 @@
 	<string name="going_down_warning_str">警告状態に変化</string>
 	<string name="alert_fired_str">アラート発生</string>
 	<string name="new_agent_str">新たなエージェント作成</string>
+	<string name="recon_str">Host detected by Recontask</string>
 	<string name="unknown_str">不明なタイプ:</string>
 	<string name="unknown_event_str">不明なイベント</string>
 	<string name="validate_event_label_str">承諾済イベント</string>
