@@ -77,6 +77,7 @@
     <string name="going_down_warning_str">Going down to warning</string>
     <string name="alert_fired_str">Alert fired</string>
     <string name="new_agent_str">New agent created</string>
+    <string name="recon_str">Host detected by Recontask</string>
     <string name="unknown_str">Unknown type:</string>
     <string name="unknown_event_str">Unknown event</string>
     <string name="validate_event_label_str">Event validated</string>
